# TOY-

./: .gitignore  ENV.yml  README  conanfile.txt
Code/: AF.cpp  AF.h  CMakeLists.txt  Database.cpp  Debug.cpp  Debug.h  Main.cpp  Plugin.cpp  Precompiled.cpp  Utility.cpp
Data/: Bake2.frag  Bake3.glsl  Base.frag  Gui.glsl  Human.csv  Unlit.glsl
